--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pipe that transforms a date sting into a formatted date using moment.js",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && tape tests/**/*.js"
+    "test": "ngc && tape tests/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
     "@angular/core": "^2.0.0"
   },
   "devDependencies": {
+    "@angular/compiler": "2.0.0",
+    "@angular/compiler-cli": "0.6.4",
     "@angular/core": "^2.0.0",
     "@types/es6-shim": "^0.31.32",
     "@types/moment": "^2.13.0",
@@ -35,7 +37,7 @@
     "rxjs": "^5.0.0-beta.12",
     "tape": "^4.6.2",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.3",
+    "typescript": "~2.0.3",
     "zone.js": "^0.6.25"
   },
   "dependencies": {
