--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@conclurer/date-to-format-pipe",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Pipe that transforms a date sting into a formatted date using moment.js",
   "main": "index.js",
   "scripts": {
     "prepublish": "npm test",
     "test": "ngc && tape tests/**/*.js"
   },
+  "files": [
+    "index.js",
+    "index.metadata.json"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/conclurer/date-to-format-pipe.git"
