--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@conclurer/date-to-format-pipe",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "Pipe that transforms a date sting into a formatted date using moment.js",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "files": [
     "index.js",
+    "index.d.ts",
     "index.metadata.json"
   ],
   "repository": {
